--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -101,8 +101,8 @@
     position: absolute;
     top: 100%;
     height: 0;
-    width: 370px;
-    height: 294px;
+    width: 100%;
+    height: 100%;
     padding: 63px 24px;
     background-color: rgba(33, 150, 243, 0.9);
     opacity: 0;
